# potoo

./: .gitignore  CMakeLists.txt  Commandline.cxx  Commandline.hxx  LICENSE  Options.hxx  PDF.cxx  PDF.hxx  PDFPage.cxx  PDFPage.hxx  PixWrapper.cxx  PixWrapper.hxx  Poppler.cxx  Poppler.hxx  README.md  TesseractWrapper.cxx  TesseractWrapper.hxx  Timer.cxx  Timer.hxx  exceptions.hxx  main.cpp  utils.hxx
cmake/Modules/: FindGraphicsMagick.cmake  FindPoppler.cmake  FindTBB.cmake  FindTesseract.cmake
src/: CMakeLists.txt  Commandline.cxx  Commandline.hxx  Options.cxx  Options.hxx  PDF.cxx  PDF.hxx  PDFPage.cxx  PDFPage.hxx  Poppler.cxx  Poppler.hxx  TesseractWrapper.cxx  TesseractWrapper.hxx  main.cpp  main.cxx  utils.hxx
test/: CMakeLists.txt  main.cxx  test_Commandline.cxx  test_Options.cxx  test_PDF.cxx
test/fixtures/: example.json
test/fixtures/invalid_configs/: duplicate_crops.json  missing_options.json  wrong_syntax.json
